--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
   margin: 0;
   padding: 0;
 }
+
+.sidebar {
+  padding: 20px;
+  height: 100vh;
+  width: 300px;
+  overflow: hidden;
+  background-color: skyblue;
+}
