--- a/style.css
+++ b/style.css
@@ -1,13 +1,25 @@
 * {
   box-sizing: border-box;
+}
+
+body{
   margin: 0;
   padding: 0;
 }
 
-.sidebar {
-  padding: 20px;
-  height: 100vh;
-  width: 300px;
-  overflow: hidden;
-  background-color: skyblue;
+.header {
+  padding: 30px;
+  background-color: black;
+}
+
+.book-container {
+  padding: 30px;
+}
+
+label, input {
+  display: block;
+}
+
+label {
+  margin-bottom: 20px;
 }
