Change status problem

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 .header {
   padding: 30px;
   background-color: black;
+  display: flex;
+  color: white;
+  align-items: center;
+  justify-content: space-between;
 }
 
 body {
