--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ body {
   overflow: hidden;
   text-wrap: nowrap;
   text-overflow: ellipsis;
+  border: 4px solid black;
+  border-radius: 1px;
 }
 
 button {
@@ -55,4 +57,12 @@ button {
   width: 100px;
   height: 30px;
   border-radius: 8px;
+  margin-left: 0;
+}
+
+.book-card > div {
+  margin-bottom: 18px;
+  overflow: hidden;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
 }
