--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .book-card {
-  background-color: rgb(40, 124, 192);
+  background-color: white;
   height: 240px;
   min-width: 200px;
   max-width: 250px;
@@ -35,8 +35,9 @@ body {
   overflow: hidden;
   text-wrap: nowrap;
   text-overflow: ellipsis;
-  border: 4px solid black;
+  box-shadow: 1px 2px 3px 4px rgba(12,12,12,0.2);
   border-radius: 1px;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 button {
